<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="night_them">Темная тема</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="help_desk_post_title" translatable="false">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="help_desk_post_text" translatable="false">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="help_desk_post_email" translatable="false">"anton.vishkin@yandex.ru"</string>
    <string name="help_desk_link_to_curse" translatable="false">\"https://practicum.yandex.ru/android-developer/\"</string>
    <string name="help_desk_link_to_license" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_search_result">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer_zero" translatable="false">00:00</string>
    <string name="empty_favorites_in_library">Ваша медиатека пуста</string>
    <string name="emplty_playlists_list">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_traks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="playlist_name_edit">Название*</string>
    <string name="playlist_description">Описание</string>>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="dialog_playlist_creation_cancel_tittle">Завершить создание плейлиста?</string>
    <string name="dialog_playlist_creation_cancel_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_playlist_creation_cancel_cancellation">Отмена</string>
    <string name="dialog_playlist_creation_cancel_finish">Завершить</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="track_removing_dialog_title">Удалить трек</string>
    <string name="track_removing_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="track_removing_dialog_negative">Отмена</string>
    <string name="track_removing_dialog_positive">Удалить</string>
    <string name="no_tracks_in_playlist_share_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_remove_playlist_title">Удалить плейлист</string>
    <string name="dialog_remove_playlist_message">Хотите удалить плейлист %1$s ?</string>
    <string name="dialog_remove_playlist_negative_button">Нет</string>
    <string name="dialog_remove_playlist_positive_button">Да</string>
    <string name="playlist_edit_save_button">Сохранить</string>
    <string name="playlist_edit_navbar">Редактировать</string>
    <string name="no_track_in_playlist_toast">В этом плейлисте нет треков</string>
</resources>