<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginStart="@dimen/standard_margin">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/arrow_back"
            android:foreground="?attr/selectableItemBackground" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"
            android:textAllCaps="false"
            android:text="@string/settings"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:text="@string/night_them"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:gravity="end" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:text="@string/share_application"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_marginEnd="14dp"
            android:src="@drawable/share"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:text="@string/write_to_support"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:src="@drawable/support"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textAllCaps="false"
            android:text="@string/license_agreement"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/settings_text_margin"
            android:layout_marginBottom="@dimen/settings_text_margin"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward"
            />
    </FrameLayout>
</LinearLayout>