<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <TextView
        style="@style/NavigationBar"
        android:text="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:background="@drawable/grey_rectangle">

        <EditText
            android:id="@+id/search_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/extra_margin"
            android:background="@null"
            android:drawableStart="@drawable/small_search"
            android:drawablePadding="@dimen/minimum_margin"
            android:drawableTint="?attr/hintsColor"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="256"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/hintsColor" />

        <ImageView
            android:id="@+id/search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:src="@drawable/edit_clear"
            android:visibility="invisible"
            app:tint="?attr/hintsColor" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_medium_margin">

        <LinearLayout
            android:id="@+id/no_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="86dp"
                android:src="@drawable/no_search_result" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/standard_margin"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/no_search_result"
                android:textSize="@dimen/place_holder_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="86dp"
                android:src="@drawable/no_internet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/extra_medium_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textSize="@dimen/place_holder_text_size" />

            <Button
                android:id="@+id/refresh_button"
                style="@style/RefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_medium_margin"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/refresh"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimum_margin"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_horizontal"
                android:text="@string/search_history"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/place_holder_text_size"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_track_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="visible" />

            <Button
                android:id="@+id/clear_history"
                style="@style/RefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/extra_medium_margin"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/clear_history"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue_fon"
            android:visibility="visible" />
    </FrameLayout>

</LinearLayout>